<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/prefGeneral">
        <ListPreference
            android:defaultValue="@string/ltype_biweekly"
            android:entries="@array/pref_lensTypeLb"
            android:entryValues="@array/pref_lensTypeValue"
            android:key="@string/pref_ltype_key"
            android:summary="%s"
            android:title="@string/ltype_title"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/continualKey"
            android:title="@string/continualTitle"
            android:summaryOn="@string/continualSumOn"
            android:summaryOff="@string/continualSumOff"/>

    </PreferenceCategory>
</PreferenceScreen>